--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -18,7 +18,8 @@
     "import os\n",
     "import cv2 as cv\n",
     "import torch\n",
-    "\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
@@ -153,6 +154,32 @@
     "\n",
     "print(f'Number of parent-child pairs created: {len(parent_child_pairs)}') \n",
     "print(f'Sample pair labels: {pair_labels[:10]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db13e35e-49e4-4eca-80d1-96ffb73c3b15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SNN_ARCHITECTURE(nn.modules):\n",
+    "    def__init__(self):\n",
+    "      super(SNN_ARCHITECTURE,self).__init__()\n",
+    "    self.cnn = nn.Sequential(\n",
+    "    nn.Conv2d(3, 32, kernel_size=3, stride=1, padding=1),\n",
+    "    nn.ReLU(),\n",
+    "    nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "    nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1),\n",
+    "    nn.ReLU(),\n",
+    "    nn.MaxPool2d(kernel_size=2, stride=2)\n",
+    ")\n",
+    "\n",
+    "self.fc = nn.Sequential(\n",
+    "    nn.Linear(64 * 28 * 28, 512),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(512, 128)\n",
+    ")\n"
    ]
   }
  ],
